--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -52,9 +52,9 @@
       class="video-js"
       controls
       preload="auto"
-      width="640"
-      height="264"
-      poster="MY_VIDEO_POSTER.jpg"
+      width="1300"
+      height="728"
+      poster="./assets/Video%20image.png"
       data-setup="{}"
     >
       <source
