--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -58,8 +58,9 @@
       data-setup="{}"
     >
       <source
-        src="./assets/NET%206%20&%20EF%20Core%20🚀%20ALL%20Relationships%20(1_1,%201_n,%20n_n)%20with%20Entity%20Framework%20Core%206%20&%20SQL%20Server.mp4"
-        type="video/mp4"/>
+        src="./assets/Chidimma%20Jude%20Nnam.mp4"
+        type="video/mp4"
+      />
       <!--      <source src="MY_VIDEO.webm" type="video/webm"/>-->
       <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
