--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -58,7 +58,7 @@
       data-setup="{}"
     >
       <source
-        src="./assets/Chidimma%20Jude%20Nnam.mp4"
+        src="./assets/WhatsApp%20Video%202023-04-21%20at%208.20.00%20AM.mp4"
         type="video/mp4"
       />
       <!--      <source src="MY_VIDEO.webm" type="video/webm"/>-->
