--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
     <!-- Hamburger menu for mobile devices -->
     <button (click)="toggleMenu()"
-            class="lg:hidden flex flex-col justify-center items-center w-10 h-10 p-1 rounded-full hover:bg-gray-100 focus:outline-none focus:ring focus:ring-gray-300">
+            class="lg:hidden flex flex-col justify-center items-center w-10 h-10 p-1 rounded-full hover:bg-inherit focus:outline-none focus:ring focus:ring-gray-700">
       <i class="fa-solid fa-bars"></i>
     </button>
 
