--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -80,7 +80,7 @@
   <!--  Text area ends -->
 
   <!--  Card area starts -->
-  <div class="my-20 lg:flex justify-between">
+  <div class="my-20 lg:flex gap-5 justify-between items-center">
     <div class="bg-[#141125] lg:w-[47.5%] p-10 md:rounded-3xl rounded-xl">
       <div>
         <h1 class="font-bold text-4xl"> Large businesses</h1>
