--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<div class="md:mx-40">
+<div class="animated bounce md:mx-40">
   <!-- Hero Section Start -->
   <div class="grid lg:p-20 p-10">
     <h1 class="font-bold text-4xl lg:text-start text-center">The Payment Solution <br>for Your Business.</h1>
